Wed Jul 20 13:10:23 2005  Paul Calabrese  <calabrese_p@ociweb.com>

        * dds/InfoRepo/DCPSInfoRepo.cpp:

          Fix -a option so it overrides the address properly.

Mon Jul 18 17:27:29 2005  Paul Calabrese  <calabrese_p@ociweb.com>

        * tests/transport/simple_bp/SimpleSubscriber.cpp:

          Fix return value error that VC6 caught.

Mon Jul 18 13:30:13 2005  Paul Calabrese  <calabrese_p@ociweb.com>

        * tests/DCPS/FooTest5/publisher.cpp:

          Remove extra fclose() that was causing failures.

Mon Jul 18 13:18:45 2005  Paul Calabrese  <calabrese_p@ociweb.com>

        * DevGuideExamples/DDS/Messenger/DataReaderListener.h:
        * DevGuideExamples/DDS/Messenger/DataReaderListener.cpp:
        * DevGuideExamples/DDS/Messenger/Messenger.idl:
        * DevGuideExamples/DDS/Messenger/Messenger.mpc:
        * DevGuideExamples/DDS/Messenger/Writer.h:
        * DevGuideExamples/DDS/Messenger/Writer.cpp:
        * DevGuideExamples/DDS/Messenger/domain_ids:
        * DevGuideExamples/DDS/Messenger/publisher.cpp:
        * DevGuideExamples/DDS/Messenger/run_test.pl:
        * DevGuideExamples/DDS/Messenger/subscriber.cpp:

          Update and merge the devguide example.  I put it here
          because it proved difficult to integrate into the TAO
          DevGuideExamples directory.

Mon Jul 18 06:43:11 MST 2005  Scott Harris <harris_s@ociweb.com>

        * dds/DCPS/Service_Participant.h:

          Backed out the change of Thu Jul 14 12:39:15 MST 2005
          because reference_to_servant was fixed in 1.4a_p4.

Sat Jul 16 17:51:05 MST 2005  Scott Harris <harris_s@ociweb.com>

        * bin/DCPS/CPPTemplate.pm:

          Make samples replaced in the subscriber's instance queue delete as
          well as free the sample.

        * dds/DCPS/ReceivedDataElementList.inl:

          Added a comment about the ReceivedDataElement destructor
          needing to destroy its InstanceState. But it currently
          causes troubles.
